add toggle on icon

--- a/content.css
+++ b/content.css
@@ -1,4 +1,7 @@
 span.anthe {
+}
+
+span.on {
   display: inline-block;
   width: 1.8em;
   margin: 0;
@@ -10,6 +13,6 @@ span.anthe {
   text-align: center;
 }
 
-span.anthe:hover {
+span.on:hover {
   color: #000;
 }
